# eire-election-2024

./: .gitattributes  README.md  candidate_listing_page_statuses.nuon  election-2024.db  example.html  metadata.json  pyproject.toml  schema.txt  vercel.json
data/: Constituency_Boundaries_Generalised_50m_-2179172897687097957.geojson  RO_candidates_missing_from_candidates.csv  add_previous_member_column.json  candidate_lists.csv  candidate_lists.json  candidate_ro_map.csv  candidate_ro_map_2.csv  candidates.json  candidates_wiki.tsv  constituencies.tsv  deduplicated_candidate_ro_map.csv  ff_details.jsonl  geocoding_result.csv  main.json  main_no_nulls.json  main_no_nulls_with_blank_incumbent.json  manually.json  missing_from_candidate-info.json  missing_from_candidates.json  party_websites.csv  returning_officer_data.json  returning_officer_data_with_address.json  sf_statements.json  wikitable2json.com_candidates.json
data/candidate_lists/: ff.json  fg.json  green.json  labour.json  pbp.json  sd.json  sf.json
data/returning_officer_snapshot/: Carlow–Kilkenny.html  Cavan–Monaghan.html  Clare.html  Cork East.html  Cork North-Central.html  Cork North-West.html  Cork South-Central.html  Cork South-West.html  Donegal.html  Dublin Bay North.html  Dublin Bay South.html  Dublin Central.html  Dublin Fingal East.html  Dublin Fingal West.html  Dublin Mid-West.html  Dublin North-West.html  Dublin Rathdown.html  Dublin South-Central.html  Dublin South-West.html  Dublin West.html  Dún Laoghaire.html  Galway East.html  Galway West.html  Kerry.html  Kildare North.html  Kildare South.html  Laois.html  Limerick City.html  Limerick County.html  Longford–Westmeath.html  Louth.html  Mayo.html  Meath East.html  Meath West.html  Offaly.html  (+8 more)
plugins/: urldecode.py
scripts/: check_candidate_listing_pages.nu  deploy.sh  parser.nu  pull_candidate_info_returning_officers.nu  pull_candidates_from_returning_officers.nu  pull_images.nu  pull_statements.nu  run.sh
static/: main.css  search.js
templates/: _layout.html  index.html
(+366 files in other folders)
