[tool.poetry]
name = "eire-election-2024"
version = "0.1.0"
description = "Data about the 2024 Irish General Election"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
datasette = "^0.65"
datasette-geojson = "^0.4.0"
datasette-geojson-map = "^0.5.0"
sqlite-utils = "^3.37"
datasette-template-sql = "^1.0.2"
datasette-publish-vercel = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
